<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/MyProgress"

            android:title="@string/menu_progress" />
        <item
            android:id="@+id/MyDashboard"

            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/MyAttendance"

            android:title="@string/menu_attendance" />
        <item
            android:id="@+id/MyProfile"

            android:title="@string/menu_profile" />
    </group>

        <item
            android:title="Network Calls" >
            <menu>
             <item android:title="Load Data"
                 android:id="@+id/sync_controller"/>

            </menu>

        </item>





</menu>
