<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_asset"
    android:backgroundTint="#202020"
    android:backgroundTintMode="multiply"
    tools:context="com.babbangona.shpincentiveapp.MainActivity">




    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tv_string"
        android:textColor="@color/txt_white_color"
        android:textSize="34sp"
        android:layout_marginTop="80dp"
        android:layout_gravity="center
"
        android:alpha="0.5"
        android:gravity="center"/>





    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/crd_string"
        android:layout_gravity="center"
        android:alpha="0.8"
        android:textSize="18sp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="200dp"
        android:background="@color/layout_black"
        android:textColor="@color/txt_white_color"
        android:padding="10dp"
        android:onClick="next"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"


            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:text="@string/tv_footer"
            android:textColor="@color/txt_white_color" />

    </RelativeLayout>


</LinearLayout>
