<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".VisualizationPage">
    
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:translationZ="5dp">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:orientation="vertical"
            android:gravity="center">
            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="@drawable/profile_component"/>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"

             android:orientation="vertical">
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textSize="18sp"
                 android:text="@string/visualisation_progressbar_done"/>

             <ProgressBar
                 android:id="@+id/progress_done"
                 style="?android:attr/progressBarStyleHorizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"


                 android:elevation="8dp"
                 android:translationZ="10dp"
                 android:shadowColor="@color/shadow_colour"



                 android:maxHeight="30dip"

                 android:minHeight="10dip" />
         </LinearLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/visualisation_progressbar_upload"/>

                <ProgressBar
                    android:id="@+id/progress_upload"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"


                    android:elevation="8dp"
                    android:translationZ="10dp"
                    android:shadowColor="@color/shadow_colour"



                    android:maxHeight="30dip"

                    android:minHeight="10dip" />
            </LinearLayout>
            
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="5dp"
        android:translationZ="5dp"

        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:padding="10dp"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:id = "@+id/tv_records"/>

           <android.support.v7.widget.CardView
               android:layout_width="match_parent"
               android:layout_height="30dp"
               android:layout_marginBottom="1dp"
               android:elevation="5dp"
               android:layout_margin="10dp"
               android:translationZ="5dp"

               android:layout_gravity="bottom">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="match_parent"
                   android:gravity="center"
                   android:onClick="Homepage"
                   android:text="@string/visualisation_progressbar_home"
                   android:textSize="18sp"
                   android:textColor="@color/txt_white_color"
                   android:background="@color/btn_info_color"/>
           </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>