<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="600dp"
        android:layout_height="1dp" />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:elevation="5dp"
        android:layout_marginBottom="10dp"
        android:translationZ="5dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <ImageView
                    android:layout_width="23dp"
                    android:layout_height="match_parent"
                    android:id="@+id/activity_colour_code"
                    android:alpha="0.7"
                    android:background="@color/colorAccent"/>

              <LinearLayout
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/activity_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/main2activity_visualisation_title"
                        android:textColor="@color/txt_black_color"
                        android:textSize="22sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/recycler_iamworking"
                        android:textSize="16sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                   
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/layout_dark_grey" />


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:fontFamily="@font/roboto"
                        android:text="@string/recycler_progress"
                        android:textSize="16sp"
                        android:textStyle="bold" />


                        <ProgressBar
                            android:progressDrawable="@drawable/green_progress_drawable"
                            style="?android:attr/progressBarStyleHorizontal"

                            android:id="@+id/activity_progress"
                            android:layout_height="7dp"
                            android:layout_width="match_parent"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="5dp"
                            android:layout_marginRight="4dp"

                            android:elevation="10dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginBottom="2dp"

                            />

                    <TextView
                        android:id="@+id/activity_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                </LinearLayout>
              </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>