<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id ="@+id/year_recycler_layout"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="600dp"
        android:layout_height="1dp"
        android:id="@+id/widthController"
        android:visibility="invisible"/>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:elevation="5dp"
        android:layout_marginBottom="10dp"
        android:translationZ="5dp"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/activity_colour"
                    android:layout_width="23dp"
                    android:layout_height="match_parent"

                    android:background="@color/colorAccent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/year_recycler_title"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="7dp"
                            android:fontFamily="@font/roboto"
                            android:text="@string/main2activity_visualisation_title"
                            android:textColor="@color/txt_black_color"
                            android:textSize="22sp" />
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="10dp"
                                android:fontFamily="@font/roboto"
                                android:text="@string/year_recycler_header"
                                android:textColor="@color/txt_grey_colour"
                                android:textSize="15sp" />
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"

                                android:textSize="16sp"
                                android:textColor="@color/txt_black_color"
                                android:id = "@+id/year_recycler_date"/>

                        </LinearLayout>


                    </LinearLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/layout_light_grey" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:gravity="center"
                        android:textColor="@color/txt_black_color"
                        android:text="@string/working_status"
                        android:textSize="16sp" />
                    <TextView
                        android:layout_width="match_parent"
                       android:layout_marginLeft="10dp"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:textColor="@color/txt_grey_colour"
                        android:textStyle="bold"
                        android:id="@+id/activity_working"
                     />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/layout_light_grey" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto"
                        android:gravity="center"
                        android:textColor="@color/txt_black_color"
                        android:text="@string/successful_status"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/year_recycler_count"
                            android:layout_width="70dp"
                            android:layout_height="60dp"
                            android:textColor="@color/txt_grey_colour"

                            android:fontFamily="@font/roboto"

                            android:gravity="center"
                            android:textSize="30sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textColor="@color/txt_grey_colour"
                            android:fontFamily="@font/roboto"
                            android:id = "@+id/year_recycler_rate"

                            android:textSize="18sp"
                            android:textStyle="bold" />


                    </LinearLayout>
                </LinearLayout>


            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>


</LinearLayout>